Fixed quotes spacing

--- a/src/styles/components/pages/_quotes.scss
+++ b/src/styles/components/pages/_quotes.scss
@@ -25,6 +25,7 @@
   }
 
   footer {
+    margin-top: 2.4rem;
     font-size: 1.8rem;
     color: $clr-base;
 
